<resources>
    <string name="app_name">MyMV</string>
    <string name="add_new">add new</string>
    <string name="manage_vehicle_type_text">Type:</string>
    <string name="manage_vehicle_manufacturer_text">Manufacturer:</string>
    <string name="manage_vehicle_model_text">Model:</string>
    <string name="manage_vehicle_update_button_text">update</string>
    <string name="vehicle_owner_text">Owner:</string>
    <string name="vehicle_production_year_text">Production year:</string>
    <string name="vehicle_previous_owners_text">Previous owners:</string>
    <string name="manage_vehicle_delete_button_text">delete</string>
    <string name="vehicle_kilometerage_text">Kilometerage:</string>
    <string name="vehicle_last_oil_change_text">Last oil change:</string>
    <string name="vehicle_next_oil_change_text">Next oil change at:</string>
    <string name="paired_devices_text">paired devices</string>
    <string name="scan_button">scan</string>
    <string name="discovered_devices_text">discovered devices</string>
    <string name="manage_vehicle_maintenance">Maintenance</string>
    <string name="maintenance_statistics_button">Statistics</string>
    <string name="maintenance_add_button">Add</string>
    <string name="history_table_name">History</string>
    <string name="oil_table_name">Oil</string>
    <string name="maintenance_table_name">Maintenance</string>
</resources>
