<?xml version="1.0" encoding="utf-8"?>
<!-- NOT THE SAME AS ORIGINAL -> https://android.googlesource.com/platform/development/+/25b6aed7b2e01ce7bdc0dfa1a79eaf009ad178fe/samples/BluetoothChat/res/layout/device_list.xml

     Copyright (C) 2009 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:id="@+id/paired_devices_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices_text"
        android:visibility="gone"
        android:background="#669"
        android:textColor="#fff"
        />

    <ListView android:id="@+id/paired_devices_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <TextView android:id="@+id/discovered_devices_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/discovered_devices_text"
        android:visibility="gone"
        android:background="#669"
        android:textColor="#fff"
        />

    <ListView android:id="@+id/discovered_devices_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <Button android:id="@+id/scan_button_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_button"
        />

</LinearLayout>
